--- a/DGSConsole/DGSConsole.Agent/DGSConsole.Agent.csproj
+++ b/DGSConsole/DGSConsole.Agent/DGSConsole.Agent.csproj
@@ -217,6 +217,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AgentDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -295,6 +296,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Manage.cshtml" />
+    <Content Include="ViewModels\agents.json" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
