dwd console | data grid implementation

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ FakesAssemblies/
 /DGSWebDialer/WebDialer/Content/bugs/2-23-2016- 73309- PM.png
 /DGSWebDialer/WebDialer/Content/bugs/2-23-2016- 75435- PM.png
 /DGSWebDialer/Webdialer.Resource/Content/bugsasd2-24-2016- 124425- AM.png
+/DGSConsole/DGSConsole.Agent/core/modules/Chat/Controller
