--- a/DGSConsole/DGSConsole.Agent/DGSConsole.Agent.csproj
+++ b/DGSConsole/DGSConsole.Agent/DGSConsole.Agent.csproj
@@ -341,6 +341,7 @@
     <Content Include="Views\Home\Manage.cshtml" />
     <Content Include="Views\chat\chatApp.cshtml" />
     <Content Include="Views\Home\List.cshtml" />
+    <Content Include="Views\Home\ChatRoom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
