--- a/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
+++ b/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
@@ -198,7 +198,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="core\app.js" />
+    <Content Include="core\RTCMultiConnection.min.js" />
     <Content Include="core\signalR\hubProvider.js" />
+    <Content Include="core\socket.io.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
