--- a/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
+++ b/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
@@ -248,6 +248,7 @@
     <Content Include="core\signalR\hubProvider.js" />
     <Content Include="core\socket.io.min.js" />
     <Content Include="core\stunservers.js" />
+    <Content Include="core\websocketConnection.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
