--- a/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
+++ b/DGSConsole/SignalRChat/DGSConsole.Agent.csproj
@@ -197,6 +197,7 @@
     <Compile Include="ViewModels\AgentDataProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\5WUpcPZ.png" />
     <Content Include="Content\bootstrap - Copy.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -204,6 +205,8 @@
     <Content Include="Content\bootstrap.min - Copy.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Custom.min.css" />
+    <Content Include="Content\DY6gND0.png" />
+    <Content Include="Content\HYcn9xO.png" />
     <Content Include="Content\sound\beep-01.wav" />
     <Content Include="Content\sound\DTMF0.mp3" />
     <Content Include="Content\sound\DTMF1.mp3" />
