--- a/DGSConsole/webRTC/VideoChat.csproj
+++ b/DGSConsole/webRTC/VideoChat.csproj
@@ -22,6 +22,7 @@
     <IISExpressUseClassicPipelineMode />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -274,6 +275,7 @@
     <Content Include="Content\icomoon\fonts\icomoon.eot" />
     <Content Include="Content\icomoon\fonts\icomoon.ttf" />
     <Content Include="Content\icomoon\fonts\icomoon.woff" />
+    <None Include="Properties\PublishProfiles\aisha.pubxml" />
     <None Include="Properties\PublishProfiles\mg-webrtc - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\mg-webrtc - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
